css/main.css
/*! HTML5 Boilerplate v5.3.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* =============================================================================
   Base styles: opinionated defaults
   ============================================================================= */
/* COLORS =============================================
   Dark Pink (Magenta): #b21e49;
   Light Grey: #eeeeee;
   Bright Pink: #ff1256;
   Dark Grey: #222222;
   Blue: #23a4cc;
 ============================================= */
html {
    color: #222;
    font-size: 1em;
    line-height: 1.4;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * These selection rule sets have to be separate.
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: vertical;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ============================================================================================================================================
   Author's custom styles
   ============================================================================================================================================ */
body, html{
  font-family: 'Source Sans Pro', sans-serif;
  font-size: 16px;
  color: #222;
  background-color: #eee;
}

a {
  font-weight:700;
 	color:#23a4cc;
  text-decoration:none;
}

p{
  font-size:1em;
  line-height:1.4;
}

h1, h2, h3, h4 {
  font-weight:700;
}

h1 {
  font-size: 1.4em;
  line-height: 1.6;
}

h2{
  font-size:1em;
}

.btn{
    background-color: #b21e49;
    border: none;
    color: #fff;
    font-weight: 700;
    text-transform: uppercase;
    line-height: 2.5;
    text-align: center;
    box-shadow: 2px 2px 0px #DADADA;
    height: 2.5em;
    width: 100%;
    display: block;
}

.btn:hover{
    background-color: #ff1256;
}

input.btn{
    background-color: #ff1256;
}

input.btn:hover{
    background-color: #b21e49;
}

.no-border{
    border: none;
}

/*********************header area**************************/
.main-header {
  width: 100%;
  background-color: #eee;
  margin: auto;
}

#logo{
  width:100%;
  margin: 0 auto;
  text-align: center;
}

.fa {
  padding-right: 10px;
}

nav{
  width: 100%;
  background:#ddd;
}

nav ul {
  list-style:none;
  padding:0;
}

nav ul li{
  border-bottom: 1px solid #ccc;
  text-align: center;
  padding: 15px 0;
}

nav ul li a{
  font-size: 1.125em;
  text-transform: uppercase;
  color: #333;
}

nav ul li a:hover{
  color: #FF1256;
}

/********************************main area********************/
.main {
  width: 100%;
  padding: 0 2%;
  margin:auto;
  max-width: 960px;
}

.top-img {
  width: 100%;
  height: auto;
  margin:auto;
}

.top-img img{
  max-width: 100%;
  max-height: 100%;
}

.top-story{
  width: 100%;
  margin:auto;
}

/************************sidebar area*********************/
.sidebar {
  width: 100%;
  margin:auto;
}

.newsletter {
  border-bottom: 1px solid #ccc;
  padding-bottom: 20px;
}

.newsletter input{
  width: 100%;
  box-sizing: border-box;
}

.newsletter input[type="text"]{
  margin-bottom: 10px;
  padding: 5px 0;
}

.upcoming, .faq {
  display:none;
}

.detail .newsletter {
  border-bottom:none;
}
/********************newsfeed area*******************/
.feed {
  width: 100%;
  margin:auto;
}

.feed p{
  display:none;
}

.feed-type{
  text-transform:uppercase;
  font-size:0.8em;
}

.feed-image{
  width: 45%;
  float: left;
  margin: 0;
  padding-right: 3%;
  height: auto;
}

.feed-image img{
  max-width: 100%;
  max-height: 100%;
}
.feed-item{
  clear:both;
  border-bottom: 1px solid #ccc;
  padding-bottom: 15px;
}

.feed-item h2 {
  margin: 0;
}

.feed-item h2 a {
  color:#222;
}

.feed-item h2 a:hover{
  color: #23a4cc;
}

.feed-item:nth-child(7){
  border-bottom: none;
}

.feed-info {
  width:42%;
  float: left;
}

/***detail pages*********/
.reviews-img,
.news-img{
    width:100%;
    margin: 0;
}

/*****************footer area****************/


footer {
  width: 100%;
  margin:auto;
}

#footer-logo{
  width:46.8%;
  margin:auto;
}


/*************************************ABOUT PAGE*****************************************/
.map-container {
  position: relative;
  padding-bottom: 75%;
  height: 0;
  overflow: hidden;
}


.map-container iframe {
  position: absolute;
  top:0;
  left: 0;
  width: 100%;
  height: 100%;
}

.mission{

}

.team{

}

.team-member{

}

.team-img{
  background-position:center;
  background-size:cover;
  background-repeat:no-repeat;
  width:40%;
  padding-bottom:40%;
  float:left;
  margin-right:20px;
  border:1px solid #ccc;
}

.team-name{

}

.team-title{

}

.team-description{
  display:none;
}

#team-img-01 {
	background-image:url('../img/team-jack.png');
}

#team-img-02 {
	background-image:url('../img/team-lana.png');
}
/* ... */

